name:           SubZero
version:        0.1.0
cabal-version:  >= 1.4
build-type:     Simple
license:        GPL-3
license-file:   LICENSE
maintainer:     Edgar Gomes de Araujo
stability:      experimental
homepage:
package-url:
bug-reports:    talktoedgar@gmail.com
synopsis:       Library for subdivision surfaces
description: Library to create and transforms smooth subdivision surfaces
  - Based on Catmull-Clark rules. But extendable for others schemes
  - Full crease/corne edge/vertex 
category:       Math
author:         Edgar Gomes de Araujo

Flag test
    Description:      Build the test suite, including an executable to run it.
    Default:          True

Library
    build-depends:    base       >= 4   && < 5
                    , containers >= 0.4 && < 0.5
                    , vector     >= 0.9 && < 0.10
                    , hammer     == 0.1.1
    exposed-modules:  SubZero.Base
                    , SubZero.Mesh
                    , SubZero.Subdivide
                    , SubZero.VertexEval

    exposed:          True
    buildable:        True
    hs-source-dirs:   src

Executable tester
    hs-source-dirs:   src
    Main-Is:          Main.hs
    Buildable:        True
    Build-depends:    base       >= 4   && < 5
                    , QuickCheck >= 2.4 && < 2.5
                    , containers >= 0.4 && < 0.5
                    , vector     >= 0.9 && < 0.10
