name:           SubZero
version:        0.1.0
cabal-version:  >= 1.8
build-type:     Simple
license:        GPL-3
license-file:   LICENSE
maintainer:     Edgar Gomes de Araujo
stability:      experimental
homepage:
package-url:
bug-reports:    talktoedgar@gmail.com
synopsis:       Library for subdivision surfaces
description: Library to create and transforms smooth subdivision surfaces
  - Based on Catmull-Clark rules. But extendable for others schemes
  - Full crease/corne edge/vertex
category:       Math
author:         Edgar Gomes de Araujo

Flag test
    Description:      Build the test suite, including an executable to run it.
    Default:          False

Library
    ghc-options: -Wall
                 -O2
                 -funbox-strict-fields
                 -fwarn-tabs
                 ---eventlog
                 -auto-all
                 -caf-all

    build-depends:    base       == 4.*
                    , containers == 0.5.*
                    , vector     == 0.10.*
                    , primitive  == 0.5.*
                    , hammer     == 0.2.*

    exposed-modules:  SubZero
                    , SubZero.Internal

    other-modules:    SubZero.SubOne
                    , SubZero.SubTwo

    exposed:          True
    buildable:        True
    hs-source-dirs:   src


Executable SubZero-test
    hs-source-dirs:   profile
    Main-Is:          Main.hs
    Build-depends:    SubZero
                    , base       == 4.*
                    , hammer     == 0.2.*
                    , vector     == 0.10.*
    if flag(test)
       Buildable:     True
    else
       Buildable:     False
